Closed Bug 559442 Opened 15 years ago Closed 15 years ago

Fix ctypes closures to work on a non-GC thread

Categories

(Core :: js-ctypes, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Patch, v1 (obsolete) — Splinter Review
ctypes currently assumes that GC happens on the same thread that closures run on. This isn't always true!
Attachment #439098 - Flags: review?(dwitte)
Comment on attachment 439098 [details] [diff] [review] Patch, v1 Looks good, but I'd make the 'cxThread' member and its setter expression '#ifdef DEBUG', since that's the only place you're using it. r=dwitte
Attachment #439098 - Flags: review?(dwitte) → review+
Attachment #439098 - Attachment is obsolete: true
Attachment #439130 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: