Bug 559442 - 'Fix ctypes closures to work on a non-GC thread'. r=dwitte.